fixed an overflow issue with the page. Made aspects of the webpage more responsive

--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,6 @@
-body,h1,h2,h3,h4,h5,h6 {font-family: NewsReader, sans-serif;}
+body,h1,h2,h3,h4,h5,h6 {
+    font-family: NewsReader, sans-serif;    
+}
 /* Customised colors from w3.css framework */
 .w3-theme-l5 {color:#000 !important; background-color:#fbeff1 !important}
 .w3-theme-l4 {color:#000 !important; background-color:#f3cbd1 !important}
@@ -96,7 +98,7 @@ header{
 
 .three-column{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 2em;
     padding: 10px 10px 10px 10px;
     margin: 10px 10px 10px 10px;
@@ -105,7 +107,8 @@ header{
 }
 
 .w3-card-4{
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     height: fit-content;
     
 
@@ -140,11 +143,10 @@ img{
     text-decoration: none;
 }
 
-.w3-image{
-    width: 2000px;
+.w3-image {
+    width: 100%;
     height: 600px;
     object-fit: cover;
-    pointer-events: none;    
 }
 
 .w3-display-bottomleft{    
@@ -157,11 +159,12 @@ img{
     z-index: 1;
     position: relative;
     pointer-events: none;
-    width: 2000px;
+    width: 100%;
 }
 
 .image-container{
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     height: 400px;
     overflow: hidden;
 
@@ -300,8 +303,9 @@ img{
 
 /* Search bar */
 .search{
-    width: 700px;
-    height:30px;
+   width: 40%;  
+   min-width: 700px;
+   height: 30px;  
 }
 
 /* Thank you Page */
